@@ -1,0 +1,59 @@
+
+use strict;
+use warnings;
+
+BEGIN { require 5.006; }
+
+use ExtUtils::MakeMaker 6.31;
+
+
+
+my %WriteMakefileArgs = (
+  'ABSTRACT' => 'Pod::Weaver configuration the way DOHERTY does it',
+  'AUTHOR' => 'Mike Doherty <doherty@cpan.org>',
+  'BUILD_REQUIRES' => {
+    'File::Find' => '0',
+    'File::Temp' => '0',
+    'Test::More' => '0'
+  },
+  'CONFIGURE_REQUIRES' => {
+    'ExtUtils::MakeMaker' => '6.31'
+  },
+  'DISTNAME' => 'Pod-Weaver-PluginBundle-Author-DOHERTY',
+  'EXE_FILES' => [],
+  'LICENSE' => 'perl',
+  'NAME' => 'Pod::Weaver::PluginBundle::Author::DOHERTY',
+  'PREREQ_PM' => {
+    'Pod::Weaver::Config::Assembler' => '0',
+    'Pod::Weaver::Plugin::Encoding' => '0',
+    'Pod::Weaver::Section::Availability' => '1.102570',
+    'Pod::Weaver::Section::BugsAndLimitations' => '1.102670',
+    'Pod::Weaver::Section::SourceGitHub' => '0.53'
+  },
+  'VERSION' => '0.005',
+  'test' => {
+    'TESTS' => 't/*.t'
+  }
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.56) } ) {
+  my $br = delete $WriteMakefileArgs{BUILD_REQUIRES};
+  my $pp = $WriteMakefileArgs{PREREQ_PM};
+  for my $mod ( keys %$br ) {
+    if ( exists $pp->{$mod} ) {
+      $pp->{$mod} = $br->{$mod} if $br->{$mod} > $pp->{$mod};
+    }
+    else {
+      $pp->{$mod} = $br->{$mod};
+    }
+  }
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
+
+
+
