@@ -1,6 +1,6 @@
 name                = Pod-Weaver-PluginBundle-Author-DOHERTY
 author              = Mike Doherty <doherty@cpan.org>
-license             = GPL_3
+license             = Perl_5
 copyright_holder    = Mike Doherty
 copyright_year      = 2010
 
